# pmdl-1-main

./: README.md  docker-compose.yml
code/datasets/: README.md
services/backend/: dockerfile  pyproject.toml
services/backend/models/: tokenizer.pickle
services/backend/src/: data_preprocessing.py  main.py
services/frontend/: dockerfile  pyproject.toml
services/frontend/src/: main.py
