[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["DablSi <duck.shelter@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
tensorflow = "^2.17.0"
pydantic = "^2.9.2"
nltk = "^3.9.1"
uvicorn = "^0.31.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
