[tool.poetry]
name = "frontend"
version = "0.1.0"
description = ""
authors = ["DablSi <duck.shelter@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.39.0"
st-annotated-text = "^4.0.1"
pydantic = "^2.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
